<resources>
    <string name="app_name">CocktaiLog</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="internal_server_error">Internal server error</string>
    <string name="home">Home</string>
    <string name="cocktail_search">Search Cocktail</string>
    <string name="toast">Showing Toast!</string>
    <string name="filter_by">Filter by</string>
    <string name="alcoholic">Alcoholic</string>
    <string name="glass">Glass</string>
    <string name="category">Category</string>
    <string name="apply">Apply</string>
    <string name="press_back_again">Press back again to exit</string>
    <string name="reset">Reset</string>
    <string name="no_filter_selected">No filter selected</string>
    <string name="wording">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of de Finibus Bonorum et Malorum (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance.Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of de Finibus Bonorum et Malorum (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance.</string>
    <string name="instructions">Instructions</string>
    <string name="ingredient">Ingredient</string>
    <string name="tags">Tags :</string>
    <string name="no_tags">Tags :   -</string>
    <string name="colon">:</string>
    <string name="bookmark">Bookmark</string>
    <string name="bokkmar_is_empty">Bookmarked is empty</string>
    <string name="about">About</string>
    <string name="about_fragment">Aplikasi by Budi Darmawan</string>
</resources>