<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.presentation.detail.view.DetailFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.DayNight.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/img_cocktail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                tools:ignore="ContentDescription" />

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:contentInsetStartWithNavigation="0dp"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/ic_back" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp">

            <TextView
                android:id="@+id/textView_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/instructions"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_instruction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:elevation="10dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toTopOf="@id/textView_ingredient"
                app:layout_constraintEnd_toEndOf="@id/textView_instruction"
                app:layout_constraintStart_toStartOf="@id/textView_instruction"
                app:layout_constraintTop_toBottomOf="@id/textView_instruction">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/tv_instruction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/instructions"
                        android:textColor="@color/black"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView_ingredient"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ingredient"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@id/textView_instruction"
                app:layout_constraintStart_toStartOf="@id/textView_instruction"
                app:layout_constraintTop_toBottomOf="@id/card_instruction" />

            <androidx.cardview.widget.CardView
                android:id="@+id/card_ingredient"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:elevation="10dp"
                app:cardCornerRadius="10dp"
                app:layout_constraintBottom_toTopOf="@id/textView_tags"
                app:layout_constraintEnd_toEndOf="@id/textView_ingredient"
                app:layout_constraintStart_toStartOf="@id/textView_ingredient"
                app:layout_constraintTop_toBottomOf="@id/textView_ingredient">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <LinearLayout
                        android:id="@+id/container_ingredient"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        tools:ignore="UselessLeaf" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/textView_tags"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:paddingTop="8dp"
                android:text="@string/tags"
                android:textColor="@color/colorPrimary"
                app:layout_constraintStart_toStartOf="@id/textView_instruction"
                app:layout_constraintTop_toBottomOf="@id/card_ingredient" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_tags"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                app:layout_constraintEnd_toEndOf="@id/textView_instruction"
                app:layout_constraintStart_toEndOf="@id/textView_tags"
                app:layout_constraintTop_toTopOf="@id/textView_tags"
                tools:itemCount="3" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>